link to tabs from loose anchors on page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 				</div>
 				<p>This is the first tab</p>
 				<p>Fill it with content ... I mean all kinds of content. You can put as much content in it as you want!</p>
+				<p>You can also link to a <a href="#tab2">top-level tab</a>, a <a href="#tab7">top-level tab</a> in another tab set, a <a href="#tab1b">nested tab</a> or just a regular old <a href="#tab_set_2">anchor on the page</a>.</p>
 
 			</div>
 		
@@ -102,7 +103,7 @@
 
 		</div>
 		
-		<div class="tabs_container" style="width: 649px;">
+		<div class="tabs_container" style="width: 649px;" id="tab_set_2">
 
 			<ul class="toc">
 				<li><a href="#tab6"><span>Tab 6</span> Subtitle Here</a></li>
